# rainbow_community

./: .gitignore  APPRUNNER_ENV_UPDATE.md  CARAT_SYSTEM_TODO.md  DEPLOYMENT_ISSUES.md  DEPLOYMENT_READY.md  DEVIN_INSTRUCTIONS.md  DEVIN_TASK_2025-11-08.md  HANDOFF_TO_DEVIN.md  HANDOFF_TO_WINDSURF.md  README.md  ROADMAP.md  TEST_IMAGE_UPLOAD.md  UPDATE_APPRUNNER_ENV.md  analyze_posts.py  check_all_active_users.sh  check_all_users.sh  check_and_create_kenta.sh  check_db_tables.py  check_existing_users_structure.sh  check_kenta_login.sh  check_kenta_profile.sh  check_local_posts.py  check_matching_display.py  check_matching_search.sh  check_rds_posts.py  check_registration_data.py  check_ryo_profile.py  check_ryo_user.py  check_tourism_posts.py  check_user_kenta.py  cleanup_database.py  cleanup_test_data.sh  cleanup_test_data_direct.sql  create_kenta_profile.sh  create_kenta_profile_db.py  delete_news_api.sh  delete_news_posts.py  delete_news_via_api.sh  delete_old_news.sh  delete_post.py  (+7 more)
backend/: .dockerignore  .env  .env.example  .env.local.example  Dockerfile  README.md  add_image_url_to_messages.sql  add_membership_column.py  add_profile_columns.sql  alembic.ini  check_database.py  check_db_connection.py  create_18_dummy_posts.py  create_admin_user.py  create_dummy_comments.py  create_dummy_posts.py  create_dummy_user.py  create_postgresql_data.py  create_sqlite_fallback.py  create_staging_db.py  create_ted_user.py  create_ted_user_postgres.py  create_test_user.py  delete_news.py  delete_user.py  deploy.sh  execute_postgresql_migration.py  fly.toml  init_db_for_ci.py  (+16 more)
(+147 files in other folders)
